dockerfile e alteração do nome do jar

--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,9 @@
 
     </dependencies>
 
+    <packaging>jar</packaging>
     <build>
+        <finalName>sgba-springboot-application</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
